--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/*
+https://github.com/postcss/postcss-100vh-fix
+and https://github.com/Faisal-Manzer/postcss-viewport-height-correction/
+*/
 body {
   height: 100vh;
 }
