use custom vh android fix; remove inline js added for earlier safari debugging

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ https://github.com/postcss/postcss-100vh-fix
 and https://github.com/Faisal-Manzer/postcss-viewport-height-correction/
 */
 body {
-  height: 100vh;
+  height: calc(100 * var(--vh, 1vh));
 }
 
 /* Avoid Chrome to see Safari hack */
